# todoist-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: connector.py  todoist-cli.py  todoist_cli.py
src/connectors/: __init__.py  connector.py
src/connectors/entities/: __init__.py  base.py  due.py  enums.py  project.py  task.py
src/entities/: __init__.py  due.py
tests/: test_connector.py
