[tool.poetry]
name = "todoist-cli"
version = "0.0.2"
description = ""
authors = ["makridenko <makridenko.a@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"

[tool.poetry.scripts]
tdc = "src.todoist_cli:main"

[tool.poetry.group.test.dependencies]
pre-commit = "^2.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-string-normalization = true
