[black]
line-length = 80

[isort]
profile = black
balanced_wrapping = true
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
multi_line_output = 3
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip=env,.env

[flake8]
exclude =
    **/__init__.py,
max-complexity = 10
max-line-length = 80

[options.entry_points]
console_scripts =
    tdc = src.todoist_cli:main
